<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Share it</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="radiobutton1">Ameya</string>
    <string name="radiobutton2">NA</string>
    <string name="radiobutton3">Other</string>
    <string name="addbutt">Add</string>
    <string name="textfield">text</string>
    <string name="currency">    $</string>
    <string name="textdescript">Enter your amount here..</string>
    <string name="defaultamount">5.0</string>

</resources>
